--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-@import 'variables';
-@import 'libs/_normalize';
+@import './variables';
+@import './libs/normalize';
 
-@import 'components/all';
+@import './components/all';
 
 body {
   background-color: $background;
