--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,28 +14,79 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 645px) {
+    width: calc(100vw - 30px);
+    margin-top: 15px;
+  }
 }
 
 .content {
   padding: 40px 0;
 
   &__title {
-    margin: 35px 0;
+    font-weight: 800;
+    font-size: 38px;
+    margin-top: 60px;
+    margin-bottom: 50px;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+
+    @media (max-width: 1440px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 730px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1260px) {
+      .sort {
+        margin-left: 20px;
+      }
+      .categories {
+        border-radius: 20px;
+        width: 700px;
+        overflow: scroll;
+        overflow-y: hidden;
+        li {
+          white-space: nowrap;
+          padding: 13px 23px;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 660px) {
+    &__top {
+      flex-direction: column;
+      .categories {
+      width: 100%;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  @media (max-width: 760px) {
+    .categories {
+        li {
+          padding: 8px 20px;
+        }
+    }
   }
 }
-
 .container {
   width: $container-width;
   margin: 0 auto;
@@ -103,6 +154,7 @@ body {
         color: darken($color: #b6b6b6, $amount: 50);
       }
     }
+
   }
 
   &__item {
@@ -241,7 +293,6 @@ body {
 
         span {
           color: darken($color: $gray-line, $amount: 20);
-          font-weight: 500;
           font-weight: 600;
         }
 
@@ -289,11 +340,6 @@ body {
       color: #777777;
     }
 
-    icon {
-      position: relative;
-      top: 2px;
-    }
-
     img {
       display: block;
       width: 300px;
@@ -307,5 +353,8 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
+  }
+  .content__items {
+    display:block;
   }
 }
