--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,22 @@ body {
 .content {
   padding: 40px 0;
 
+  &__error-info {
+    margin: 100px auto;
+    width: 500px;
+    text-align: center;
+
+    h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+  }
+
   &__title {
     font-weight: 800;
     font-size: 38px;
@@ -37,12 +53,14 @@ body {
     grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 11px;
 
-    @media (max-width: 1440px) {
+    @media (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
     }
+
     @media (max-width: 1060px) {
       grid-template-columns: repeat(2, 1fr);
     }
+
     @media (max-width: 730px) {
       grid-template-columns: repeat(1, 1fr);
     }
@@ -54,39 +72,42 @@ body {
     justify-content: space-between;
 
     @media (max-width: 1260px) {
-      .sort {
-        margin-left: 20px;
-      }
       .categories {
-        border-radius: 20px;
-        width: 700px;
-        overflow: scroll;
-        overflow-y: hidden;
-        li {
-          white-space: nowrap;
-          padding: 13px 23px;
-        }
-      }
-    }
-  }
+        width: 100%;
+        overflow: auto;
 
-  @media (max-width: 660px) {
-    &__top {
-      flex-direction: column;
-      .categories {
-      width: 100%;
-        margin-bottom: 20px;
+        ul {
+          width: 785px;
+        }
+      }
+
+      .sort {
+        padding-left: 20px;
+        b {
+          display: none;
+        }
       }
     }
-  }
-  @media (max-width: 760px) {
-    .categories {
-        li {
-          padding: 8px 20px;
+
+    @media (max-width: 760px) {
+      .categories {
+        ul {
+          li {
+            padding: 8px 20px;
+          }
         }
+      }
+    }
+
+    @media (max-width: 820px) {
+      .categories {
+        margin-top: 30px;
+      }
+      flex-direction: column-reverse;
     }
   }
 }
+
 .container {
   width: $container-width;
   margin: 0 auto;
@@ -154,7 +175,10 @@ body {
         color: darken($color: #b6b6b6, $amount: 50);
       }
     }
+  }
 
+  .content__items {
+    display: block;
   }
 
   &__item {
@@ -293,6 +317,7 @@ body {
 
         span {
           color: darken($color: $gray-line, $amount: 20);
+          font-weight: 500;
           font-weight: 600;
         }
 
@@ -324,20 +349,26 @@ body {
   }
 
   &--empty {
-    margin: 0 auto;
-    width: 560px;
+    margin: 80px auto;
+    width: 620px;
     text-align: center;
 
     h2 {
-      font-size: 32px;
-      margin-bottom: 10px;
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 15px;
     }
 
     p {
-      font-size: 18px;
+      font-size: 20px;
       line-height: 145.4%;
       letter-spacing: 0.01em;
       color: #777777;
+    }
+
+    icon {
+      position: relative;
+      top: 2px;
     }
 
     img {
@@ -353,8 +384,5 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
-  }
-  .content__items {
-    display:block;
   }
 }
