--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,29 +1,31 @@
-.search{
+.root {
   position: relative;
   left: -120px;
+}
 
-  input{
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 12px 20px;
-    padding-left: 42px;
-    width: 400px;
-    border-radius: 15px;
-    font-size: 16px;
+.input {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 12px 20px;
+  padding-left: 42px;
+  width: 400px;
+  border-radius: 10px;
+  font-size: 16px;
 
-    &:focus {
-      border: 1px solid rgba(0, 0, 0, 0.2);
-    }
+  &:focus {
+    border: 1px solid rgba(0, 0, 0, 0.2);
   }
 }
-.icon{
-  position: absolute;
-  width: 24px;
-  height: 24px;
+
+.icon {
+  width: 22px;
+  height: 22px;
   opacity: 0.3;
+  position: absolute;
   left: 14px;
   top: 12px;
 }
-.crossIcon {
+
+.clearIcon {
   width: 18px;
   height: 18px;
   opacity: 0.3;
